[package]
name = "jmon-rs"
version = "0.1.0"
edition = "2024"
authors = ["tf1997 <ctf19970503@gmail.com>"]
description = "A zero-copy, cross-platform JVM monitoring library (similar to jstat) in Rust."
license = "Apache License 2.0"
repository = "https://github.com/tf1997/jmon-rs"
readme = "README.md"
keywords = ["jvm", "jstat", "monitoring", "java", "observability"]
categories = ["development-tools::profiling", "api-bindings"]

exclude = [
    ".github",
    ".gitignore",
    "images/*",
    "test_data/*"
]

[dependencies]
memmap2 = "0.9"
byteorder = "1.5" 

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
